<resources>
    <string name="app_name">Kitapla_Project</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_home">Anasayfa</string>
    <string name="title_notifications">Bildirimler</string>
    <string name="title_share">Paylaş</string>
    <string name="title_messaging">Mesaj</string>
    <string name="title_profile">Profil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
