<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/navigation_share"
        android:icon="@drawable/ic_add_circle_black_24dp"
        android:title="@string/title_share" />

    <item
        android:id="@+id/navigation_messaging"
        android:icon="@drawable/ic_email_gray_24dp"
        android:title="@string/title_messaging" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_gray2_24dp"
        android:title="@string/title_profile" />

</menu>
